--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.19.4",
     "@expo/metro-runtime": "~4.0.0",
+    "@react-native-checkbox/checkbox": "^0.5.8",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.0.4",
@@ -25,12 +26,14 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
